feat(backend): signatures methods
