# backend/src/marketplace/dto/getPurchases.dto.ts
@@ -1,0 +1,11 @@
+import { IsOptional, IsString } from 'class-validator'
+
+export class GetPurchasesHistoryDto {
+  @IsOptional()
+  @IsString()
+  fromBlock?: string
+
+  @IsOptional()
+  @IsString()
+  toBlock?: string
+}
